--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,8 @@ export(importFromPTF)
 export(importFromRawMat)
 import(R.matlab)
 import(broom)
+import(dplyr)
 import(nloptr)
+import(readr)
 import(tidyverse)
+importFrom(magrittr,"%>%")
