--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,5 +12,8 @@ License: MIT
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.4.0)
-Imports: tidyverse, R.matlab
+Imports: 
+  tidyverse, 
+  R.matlab, 
+  nloptr
 RoxygenNote: 6.0.1
