Add helper functions to set up an RNA analysis directory

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(getModelFreeEstimates)
 export(importFromEprime)
 export(importFromPTF)
 export(importFromRawMat)
+export(setupAnalysisTemplates)
+export(setupDataDirectory)
 import(R.matlab)
 import(broom)
 import(dplyr)
