--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,11 @@ Package: levylab.RNA
 Type: Package
 Title: Import And Analyze Risk-And-Ambiguity Experiments
 Version: 0.1.0
-Author: Simon Podhajsky
-Maintainer: Simon Podhajsky <simon.podhajsky@gmail.com>
+Authors@R: c(person('Simon', 'Podhajsky', email = 'simon.podhajsky@gmail.com',
+                     role = c('aut', 'trl', 'cre')),
+             person('Ifat', 'Levy', role = c('aut', 'fnd')),
+             person('Lital', 'Ruderman', role = 'ctb'),
+             person('Ruonan', 'Jia', role = 'ctb'))
 Description: For many risk and ambiguity projects, especially the ones that are 
     the workhorse for the Yale Decision Neuroscience Lab, the process of analysis is 
     remarkably similar. This package provides blueprints and shortcuts for import 
